# passman

./: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: init.sql
src-tauri/src/: main.rs  types.rs
src-tauri/src/lib/: crypto.rs  db.rs  macros.rs  mod.rs  time.rs  util.rs
src/lib/: helpers.ts
src/routes/: login.svelte  setup.svelte
src/routes/login/: login.svelte
src/routes/setup/: setup.svelte
src/routes/vault/: vault.svelte
src/routes/vault/components/: generate-password.svelte  icon-input.svelte  menu.svelte  modal.svelte  new-password-modal.svelte  password-checker.svelte  password-input.svelte  view-modal.svelte  view-password-modal.svelte
