[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }
rand = "^0.6.0"
bip39 = "1.0.1"
rusqlite = {version = "0.27.0", features = ["bundled-sqlcipher-vendored-openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
secstr = "0.5.0"
zeroize = "1.5.5"   
hex = "0.4.3"
base64 = "0.13.0"
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
